src/test/deca/context/valid/objet/exemple.deca
// Description :
//    Test context avec un exemple de programme Deca
//
// Resultats: arbre décoré

class A {
  protected int x ;
  int getX() {
      return x ;
  }
  void setX(int x) {
      this.x = x ;
  }
}

{
   A a = new A() ;

   a.setX(1) ;
   println("a.getX() = ", a.getX()) ;
}